--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     ],
     "require": {
         "guzzlehttp/guzzle": "^6.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "mikebell\\drupalcheck\\": "src/mikebell/drupalcheck"
+        }
     }
 }
