--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "require": {
         "guzzlehttp/guzzle": "^6.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.6.*"
+    },
     "autoload": {
         "psr-4": {
             "mikebell\\drupalcheck\\": "src/"
