--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "^6.2",
+        "psr/http-message": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.6.*"
